# InvertedPendulumRe

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  InvertedPendulum_Simulink.slx  README.md  animate_pendulum.m  build_simulink_model.m  compare_controllers.m  linearize_system.m  main.m  run_simulink_model.m
.claude/: settings.local.json
MATLAB/: .gitignore  build.m  main.m  test_baseline.m
MATLAB/control/: design_lqr.m  design_mpc.m  design_mrac.m  design_observer.m  export_lqr_rust.m  export_mrac_rust.m  export_observer_rust.m  export_pid_rust.m  step_pid.m
MATLAB/control/codegen/: codegen_config.m  codegen_controller.m
MATLAB/control/design/: design_mpc.m  design_mrac.m
MATLAB/control/export/: export_mpc_rust.m  export_mrac_rust.m  export_observer_rust.m  export_utils.m
MATLAB/control/step/: step_lqr.m  step_mpc.m  step_mrac.m
MATLAB/plant/: linearize_mode4_voltage_system.m  linearize_system.m  linearize_voltage_input.m  params.m  plant_model.m
MATLAB/sim/: FirmwareExperiment.m  analyze_mode4_failure.m  compare_controllers.m  create_uncertain_params.m  mpc_controller.m  sample_uncertain_params.m  sim_options.m  sim_utils.m  simulate_firmware.m  simulate_firmware_mode4.m  simulate_nonlinear.m
MATLAB/sim/mex/: .gitignore
MATLAB/simulink/: InvertedPendulum_Simulink.slx  build_simulink_model.m  run_simulink_model.m
control/: design_lqr.m
docs/: robot_parameters.md
docs/superpowers/plans/: 2026-04-06-inverted-pendulum-esp32.md  2026-04-06-matlab-refactoring.md  2026-04-06-mpc-controller.md  2026-04-06-stm32-restructure.md  2026-04-07-matlab-coder-rust-ffi.md
docs/superpowers/specs/: 2026-04-06-inverted-pendulum-esp32-design.md  2026-04-06-matlab-refactoring-design.md  2026-04-06-mpc-controller-design.md  2026-04-06-mpc-rust-firmware-design.md  2026-04-07-matlab-coder-rust-ffi-design.md
inverted-pendulum-controller/: .gitignore  Cargo.toml  build.rs
inverted-pendulum-controller/src/: ffi.rs  lib.rs
inverted-pendulum-esp32/: Cargo.toml
inverted-pendulum-esp32/.cargo/: config.toml
inverted-pendulum-esp32/src/: ble.rs  led.rs  main.rs  uart.rs  wifi.rs
inverted-pendulum-protocol/: Cargo.toml
inverted-pendulum-protocol/src/: lib.rs
inverted-pendulum-stm32/: Cargo.toml  rust-toolchain.toml
inverted-pendulum-stm32/.cargo/: config.toml
inverted-pendulum-stm32/src/: adc.rs  constants.rs  controller.rs  encoder.rs  filter.rs  fmt.rs  main.rs  motor.rs  pid.rs
inverted-pendulum-stm32/src/config/: control.rs  hardware.rs  mod.rs  ui.rs
inverted-pendulum-stm32/src/controller/: lqr.rs  lqr_constants.rs  mod.rs  mpc.rs  mpc_constants.rs  mrac.rs  mrac_constants.rs  observer.rs  observer_constants.rs  pid.rs  pid_balance.rs  pid_balance_constants.rs
inverted-pendulum-stm32/src/driver/: adc.rs  mod.rs  motor.rs
inverted-pendulum-stm32/src/tasks/: balance.rs  control.rs  current.rs  encoder.rs  mod.rs  mpc.rs  uart.rs
matlab/control/: design_pid.m
matlab/plant/: plant_model.m
matlab/simulink/: build_simulink_model.m
resources/project/230U5_Q2LXaS-famMAs359FH03Q/: INNpswDaHEm9N__OFmgXRAIOHqAp.xml
resources/project/HoHDHQ_WvHAAKj5aJOrvrg_vpt8/: xXlmKuOQ7YT_G1elNhbKQIUqSRMd.xml
resources/project/KAXfQgCar2Yb8zOxgvf9hdmLP1E/: l1q41Hm68CXCOhb-Xl6MQ7kz6Pkd.xml  l1q41Hm68CXCOhb-Xl6MQ7kz6Pkp.xml  qwihYb1gQHU08cQEwb7bToEdQKEd.xml  qwihYb1gQHU08cQEwb7bToEdQKEp.xml
sim/: simulate_nonlinear.m
simulink/: InvertedPendulum_Simulink.slx  run_simulink_model.m
(+23 files in other folders)
