[package]
name = "inverted-pendulum-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
    "esp32c3",
    "embassy",
    "esp-alloc",
] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
embassy-executor = "0.9"
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-time = "0.4"
embedded-io-async = "0.6"
log = "0.4"
inverted-pendulum-protocol = { path = "../inverted-pendulum-protocol" }

[[bin]]
name = "inverted-pendulum-esp32"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
overflow-checks = false
