[package]
edition = "2021"
name = "inverted-pendulum-stm32"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
critical-section = "1.2"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", features = [
    "memory-x",
    "stm32f303k8",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["tick-hz-32_768"] }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
micromath = "2.1.0"

[[bin]]
name = "inverted-pendulum-stm32"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = 3

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
